Fixed background image paths for certain elements.

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -17,8 +17,8 @@ body {
 
   //  background-color: rgba(67, 67, 67, 0.5);
 }
-navbar {
-  background: image_path('sky.jpeg');
+nav {
+  background: image_url('sky_blur.png');
 }
 
 .navbar-nav .nav-link {
