--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -70,7 +70,7 @@ background-attachment: fixed;
 }
 
 .box_square{
-  background: image_path('sky_blur.png');
+  background: image_url('sky_blur.png');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
