--- a/app/views/home/manage.html.erb
+++ b/app/views/home/manage.html.erb
@@ -10,8 +10,7 @@
     });
 });
 </script>
-<html>
-<body id="grey">
+
 <% @users = User.all %>
 <div class="container" style="margin-top: 9%">
 	<div class="row">
@@ -31,12 +30,12 @@
                     </div>
                     <h4><%= user.username %></h4>
 
-                    <%=link_to "Profile", user_path(user), {class: 'btn btn-outline-dark', style: 'width: 100%; color:black;'}%>
+                    <%=link_to "Profile", "/manage_users/#{user.id}", {class: 'btn btn-outline-dark', style: 'width: 100%; color:black;'}%>
                     <br>
                     <br>
                     <%if user.is_admin == false%>
                     <div class=" pull-right">
-                      <%= link_to user_path(user), method: :delete, data: { confirm: "Really delete this user?" }, class: 'btn btn-outline-danger' do %>
+                      <%= link_to "/manage_users/#{user.id}", method: :delete, data: { confirm: "Really delete this user?" }, class: 'btn btn-outline-danger' do %>
                         <i class="fa fa-trash" style = "color:black;"></i>
                       <% end %>
                       </div>
@@ -51,5 +50,3 @@
           <% end %>
 	</div>
 </div>
-</d
-</html>
