--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -86,13 +86,13 @@
             Reports
           </li>
           <li>
-            <%= link_to "All goals", report_gen_path_url(report_type: :all), format: 'pdf' %>
+            <a href="/admin_reports/all" download="goals_all_<%= Time.now.strftime('%Y%m%d%H%M%S') %>.pdf">All goals</a>
           </li>
           <li>
-            <a href="/admin_reports/funded">Only funded goals</a>
+            <a href="/admin_reports/funded" download="goals_funded_<%= Time.now.strftime('%Y%m%d%H%M%S') %>">Only funded goals</a>
           </li>
           <li>
-            <a href="/admin_reports/non_funded">Only non-funded goals</a>
+            <a href="/admin_reports/non_funded" download="goals_not_funded_<%= Time.now.strftime('%Y%m%d%H%M%S') %>">Only non-funded goals</a>
           </li>
         <% end %>
       </ul>
