--- a/app/views/home/myAccount.html.erb
+++ b/app/views/home/myAccount.html.erb
@@ -1,7 +1,6 @@
 
 <% stylesheet_link_tag 'application' %>
-<html >
-<body id="grey">
+
 <div class="container-fluid" id="bubbles" style=" margin-left: 5%; margin-top: 10%;">
     <div class="row">
 <!-- your details bubble link -->
@@ -58,7 +57,7 @@
 
 <!-- your details bubble link -->
       <div class="col-md-2  prev-account-item">
-          <a href="#">
+          <a href="/home/privacy_statement">
           <div class="row">
               <div class="col-md-3">
                <i class="fa fa-paste"></i>
@@ -78,5 +77,3 @@
       </div>
 </div>
 </div>
-</div>
-</html>
